missing test, even with 100% coverage